<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.humanet</groupId>
    <artifactId>fulltextsearch</artifactId>
    <version>1.1.0-SNAPSHOT</version>

    <name>com.humanet.fulltextsearch</name>

    <properties>
        <org.osgi.service.http.port>8080</org.osgi.service.http.port>
        <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
        <log4j.configuration>file:../log4j.properties</log4j.configuration>

        <spring.dm.version>1.2.1</spring.dm.version>
        <spring.framework.version>3.0.5.RELEASE</spring.framework.version>

        <cob.conf>standalone</cob.conf>
    </properties>

    <packaging>pom</packaging>

    <modules>
        <module>poms</module>
        <module>provision</module>
        <module>elasticsearch</module>
        <module>dist</module>
    </modules>

    <scm>
        <developerConnection>scm:git:file:///.</developerConnection>
    </scm>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.ops4j</groupId>
                <artifactId>maven-pax-plugin</artifactId>
                <version>1.5</version>
                <configuration>
                    <framework>equinox</framework>
                    <provision>
                        <param>--bootDelegation=javax.*,sun.*,com.sun.*</param>
                        <param>--vmOptions=-Xms256m -Xmx1g -Xss256k -Djava.awt.headless=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError -Delasticsearch -Dbundles.configuration.location=../devconfs/${cob.conf}</param>
                        <param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/1.6.2</param>
                        <param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/1.6.2</param>
                    </provision>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>com.springsource.repository.bundles.external</id>
            <url>http://repository.springsource.com/maven/bundles/external</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>com.springsource.repository.libraries.release</id>
            <name>SpringSource Enterprise Bundle Repository - SpringSource Library Releases</name>
            <url>http://repository.springsource.com/maven/bundles/release</url>
        </repository>
        <repository>
            <id>mave.central</id>
            <name>Maven Central Repository</name>
            <url>http://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>sonatype.repository.releases</id>
            <name>Sonatype releases repository</name>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>maven2-repository.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>com.springsource.repository.bundles.external</id>
            <url>http://repository.springsource.com/maven/bundles/external</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>com.springsource.repository.libraries.release</id>
            <name>SpringSource Enterprise Bundle Repository - SpringSource Library Releases</name>
            <url>http://repository.springsource.com/maven/bundles/release</url>
        </pluginRepository>
        <pluginRepository>
            <id>mave.central</id>
            <name>Maven Central Repository</name>
            <url>http://repo1.maven.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>

</project>